--- a/Frontend-Hospital/index.html
+++ b/Frontend-Hospital/index.html
@@ -3,143 +3,178 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hospital Queue System - Login</title>
+    <title>HealthCare Hospitals - Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <style>
-        /* Global styles */
+        :root {
+            --primary-color: #007bff;
+            --secondary-color: #00c6ff;
+            --text-color: #333;
+            --background-color: #f4f7f6;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         body {
+            font-family: 'Inter', sans-serif;
+            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            background: linear-gradient(to right, #007bff, #00c6ff);
-            font-family: 'Poppins', sans-serif;
+            min-height: 100vh;
+            overflow: hidden;
         }
 
-        /* Login container */
-        .login-container {
+        .login-wrapper {
+            display: flex;
+            width: 900px;
+            box-shadow: 0 15px 50px rgba(0, 0, 0, 0.1);
+            border-radius: 15px;
+            overflow: hidden;
             background: white;
-            padding: 30px;
-            border-radius: 12px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-            width: 380px;
-            text-align: center;
-            animation: fadeIn 0.8s ease-in-out;
         }
 
-        /* Hospital Logo */
-        .logo {
-            width: 80px;
-            margin-bottom: 10px;
-        }
-
-        /* Heading */
-        h3 {
-            font-weight: bold;
-            color: #007bff;
-            font-size: 26px;
-            margin-bottom: 20px;
-        }
-
-        /* Form styling */
-        .form-group {
+        .login-image {
+            flex: 1;
+            background: url('images/gallery/health_care.png') no-center center;
+            background-size: cover;
             position: relative;
-            margin-bottom: 15px;
+            overflow: hidden;
+        }
+
+        .login-image::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(135deg, rgba(0, 123, 255, 0.8), rgba(0, 198, 255, 0.8));
+            opacity: 0.7;
+        }
+
+        .login-content {
+            flex: 1;
+            padding: 50px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+
+        .login-logo {
+            width: 100px;
+            margin: 0 auto 20px;
+            display: block;
+        }
+
+        .login-title {
+            text-align: center;
+            color: var(--primary-color);
+            margin-bottom: 30px;
+            font-weight: 700;
         }
 
         .form-control {
-            border-radius: 8px;
-            padding-left: 40px;
-            border: 1px solid #d1d1d1;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            transition: 0.3s;
+            border: 2px solid #e0e0e0;
+            padding: 12px 15px;
+            border-radius: 10px;
+            transition: all 0.3s ease;
         }
 
         .form-control:focus {
-            border-color: #007bff;
-            box-shadow: 0 0 8px rgba(0, 123, 255, 0.3);
+            border-color: var(--primary-color);
+            box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
         }
 
-        /* Icons inside inputs */
-        .input-icon {
-            position: absolute;
-            left: 12px;
-            top: 50%;
-            transform: translateY(-50%);
-            color: #007bff;
-        }
-
-        /* Buttons */
-        .btn-primary {
-            background-color: #007bff;
+        .input-group-text {
+            background: transparent;
             border: none;
-            width: 100%;
-            padding: 10px;
-            border-radius: 8px;
-            font-weight: bold;
-            transition: 0.3s;
+            color: var(--primary-color);
         }
 
-        .btn-primary:hover {
-            background-color: #0056b3;
-        }
-
-        /* Register button */
-        #registerButton {
-            background: none;
+        .btn-login {
+            background: linear-gradient(to right, var(--primary-color), var(--secondary-color));
             border: none;
-            color: #007bff;
-            font-weight: bold;
-            cursor: pointer;
-            display: block;
-            width: 100%;
+            padding: 12px;
+            border-radius: 10px;
+            color: white;
+            font-weight: 600;
+            transition: transform 0.3s ease;
+        }
+
+        .btn-login:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+        }
+
+        .btn-register {
+            color: var(--primary-color);
+            text-decoration: none;
+            text-align: center;
             margin-top: 15px;
+            font-weight: 600;
+            transition: color 0.3s ease;
         }
 
-        #registerButton:hover {
-            text-decoration: underline;
+        .btn-register:hover {
+            color: var(--secondary-color);
         }
 
-        /* Loading spinner */
         .loading-spinner {
             display: none;
+            text-align: center;
             margin-top: 15px;
         }
 
-        /* Fade-in animation */
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(-20px); }
-            to { opacity: 1; transform: translateY(0); }
+        @media (max-width: 768px) {
+            .login-wrapper {
+                flex-direction: column;
+                width: 90%;
+                max-width: 500px;
+            }
+
+            .login-image {
+                display: none;
+            }
         }
     </style>
 </head>
 <body>
-<div class="login-container">
-    <img src="images/gallery/health_care.png" alt="Hospital Logo" class="logo">
-    <h3>HealthCare Hospitals</h3>
-    <form id="loginForm">
-        <div class="form-group">
-            <span class="input-icon"><i class="fas fa-user"></i></span>
-            <input type="email" class="form-control" id="email" placeholder="Email" required>
-        </div>
-        <div class="form-group">
-            <span class="input-icon"><i class="fas fa-lock"></i></span>
-            <input type="password" class="form-control" id="password" placeholder="Password" required>
-        </div>
-        <button type="submit" class="btn btn-primary" id="loginButton">Login</button>
-        <button id="registerButton">Register Now</button>
-        <div class="loading-spinner">
-            <span class="spinner-border text-primary" role="status"></span>
-        </div>
-    </form>
+<div class="login-wrapper">
+    <div class="login-image"></div>
+    <div class="login-content">
+        <img src="images/gallery/health_care.png" alt="Hospital Logo" class="login-logo">
+        <h3 class="login-title">HealthCare Hospitals</h3>
+        <form id="loginForm">
+            <div class="input-group mb-3">
+                <span class="input-group-text"><i class="fas fa-user"></i></span>
+                <input type="email" class="form-control" id="email" placeholder="Email" required>
+            </div>
+            <div class="input-group mb-3">
+                <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                <input type="password" class="form-control" id="password" placeholder="Password" required>
+            </div>
+            <button type="submit" class="btn btn-login w-100" id="loginButton">Login</button>
+            <a href="userHTML/register.html" class="btn btn-register w-100" id="registerButton">Register Now</a>
+            <div class="loading-spinner">
+                <span class="spinner-border text-primary" role="status"></span>
+            </div>
+        </form>
+    </div>
 </div>
 
 <!-- FontAwesome for icons -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
 
 <script>
+    // Previous JavaScript remains the same
     document.getElementById("loginButton").addEventListener("click", function (event) {
         event.preventDefault();
 
@@ -175,9 +210,9 @@
                         .then(response => response.json())
                         .then(roleData => {
                             if (roleData.role === "ADMIN") {
-                                window.location.href = "admin_dashboard.html";
+                                window.location.href = "adminHTML/admin_dashboard.html";
                             } else if (roleData.role === "USER") {
-                                window.location.href = "user_dashboard.html";
+                                window.location.href = "userHTML/user_dashboard.html";
                             } else {
                                 alert("User role not recognized.");
                             }
@@ -195,10 +230,6 @@
                 console.error("Login error:", error);
                 alert("Login failed. Please try again.");
             });
-    });
-    document.getElementById("registerButton").addEventListener("click", function(event) {
-        event.preventDefault();
-        window.location.href = "register.html";
     });
 </script>
 </body>
