--- a/Frontend-Hospital/userHTML/foreign_affairs.html
+++ b/Frontend-Hospital/userHTML/foreign_affairs.html
@@ -69,7 +69,7 @@
     <div class="container">
         <!-- Logo -->
         <a class="navbar-brand" href="user_dashboard.html">
-            <img src="images/gallery/health_care.png" alt="eChannelling Logo" width="150">
+            <img src="../images/gallery/health_care.png" alt="eChannelling Logo" width="150">
         </a>
 
         <!-- Navbar Toggle for Mobile -->
@@ -93,7 +93,7 @@
 
 <div class="container1 mt-5 pt-5 ">
     <h2 class="text-center text-primary ">Ministry of Foreign Affairs</h2>
-    <img src="images/gallery/emblem.png" alt="Sri Lanka" class="header-image">
+    <img src="../images/gallery/emblem.png" alt="Sri Lanka" class="header-image">
     <div class="mb-3">
         <label for="branch" class="form-label text-primary">Select Branch</label>
         <select class="form-select" id="branch">
