--- a/Frontend-Hospital/userHTML/my_appointment.html
+++ b/Frontend-Hospital/userHTML/my_appointment.html
@@ -27,7 +27,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
     <div class="container">
         <a class="navbar-brand" href="#">
-            <img src="images/gallery/health_care.png" alt="eChannelling Logo" width="150">
+            <img src="../images/gallery/health_care.png" alt="eChannelling Logo" width="150">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
