--- a/Frontend-Hospital/userHTML/register.html
+++ b/Frontend-Hospital/userHTML/register.html
@@ -164,7 +164,7 @@
             .then(data => {
                 if (data.code === 201) {
                     alert("Registration successful!");
-                    window.location.href = "index.html";
+                    window.location.href = "Frontend-Hospital/index.html";
                 } else {
                     alert(data.message);
                 }
