--- a/Frontend-Hospital/userHTML/sign_in.html
+++ b/Frontend-Hospital/userHTML/sign_in.html
@@ -29,7 +29,7 @@
     <div class="container">
         <!-- Logo -->
         <a class="navbar-brand" href="#">
-            <img src="images/gallery/health_care.png" alt="eChannelling Logo" width="150">
+            <img src="../images/gallery/health_care.png" alt="eChannelling Logo" width="150">
         </a>
 
         <!-- Navbar Toggle for Mobile -->
